--- a/style/index.scss
+++ b/style/index.scss
@@ -360,14 +360,7 @@ border-radius: 5px ;
      .col-footer{
         max-width: 255px;
         margin: 0 15px;
-        .col-footer:first-child{
-            margin-left: 0;
-
-       }
-       .col-footer:last-child{
-        margin-right: 0;
-
-   }
+    mar
         img{
             max-width: 0;
              height: 260px;
